<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient_dark">

    <include
        android:id="@+id/lheader"
        layout="@layout/layout_header" />
    <LinearLayout
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lheader"
        app:layout_constraintBottom_toTopOf="@id/btn_go_home">
        <com.google.android.material.tabs.TabLayout
            android:background="@android:color/transparent"
            app:tabTextColor="@color/white"
            app:tabTextAppearance="@style/style_item_title_tab"
            app:tabIndicatorColor="@color/success"
            app:tabSelectedTextColor="@color/success"
            app:tabIndicatorHeight="@dimen/_2sdp"
            app:tabIndicatorFullWidth="true"
            app:tabGravity="fill"
            app:tabPaddingStart="@dimen/_12sdp"
            app:tabPaddingEnd="@dimen/_12sdp"
            android:id="@+id/tab_layout_menu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintTop_toBottomOf="@id/lheader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tabMode="fixed">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ocr_info"
                style="@style/style_item_subtitle" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ocr_title_chip"
                style="@style/style_item_subtitle"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ocr_title_ekyc"
                style="@style/style_item_subtitle"/>
        </com.google.android.material.tabs.TabLayout>
        <View
            android:layout_marginHorizontal="@dimen/_1sdp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/success"/>
        <FrameLayout
            android:id="@+id/frag_container_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_layout_menu"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </LinearLayout>

    <Button
        style="@style/Text.Title"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/btn_go_home"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textSize="@dimen/_12sdp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:backgroundTint="@color/success"
        android:text="@string/button_title_completed" />
</androidx.constraintlayout.widget.ConstraintLayout>