<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_5sdp">

    <com.google.android.material.card.MaterialCardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_15sdp"
        android:elevation="@dimen/_4sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/black"
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_nfc_title_ready_read_info"
                android:fontFamily="@font/bold"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/tv_guide"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_width="wrap_content"
                android:elevation="0dp"
                android:layout_height="wrap_content"
                android:text="@string/popup_nfc_content_guide_ready_read_info"
                android:fontFamily="@font/medium"
                android:gravity="center"
                android:textSize="@dimen/text_size_default" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_25sdp"
                android:src="@drawable/ic_ready_nfc" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/btn_primary"
                android:fontFamily="@font/bold"
                android:text="@string/cancel"
                android:backgroundTint="#F3FFE9"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_default" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>
