<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_5sdp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_method_scan"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/bold"
            android:layout_gravity="center_horizontal"/>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_10sdp"
            app:contentPadding="@dimen/_5sdp"
          >
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rdo_qrcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_qrcode"
                android:textDirection="ltr"
                android:textAlignment="textStart"
                android:layoutDirection="rtl"
                android:textSize="@dimen/_12sdp"
                style="@style/Text.Body"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_10sdp"
            app:contentPadding="@dimen/_5sdp"
            >
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rdoMrz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_mrz"
                android:textDirection="ltr"
                android:textAlignment="textStart"
                android:layoutDirection="rtl"
                android:textSize="@dimen/_12sdp"
                android:buttonTint="@color/white"
                style="@style/Text.Body"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.cardview.widget.CardView>