<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.imageview.ShapeableImageView
                app:layout_constraintDimensionRatio="W,85:54"
                android:layout_marginStart="@dimen/_5sdp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Rounded"
                android:id="@+id/iv_eid_front"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_eid_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:scaleType="centerCrop"/>
            <com.google.android.material.imageview.ShapeableImageView
                app:layout_constraintDimensionRatio="W,85:54"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Rounded"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:id="@+id/iv_eid_back"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_eid_front"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:scaleType="centerCrop"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                style="@style/Text.Body"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/silver"
                android:textSize="@dimen/_11sdp"
                android:text="@string/document_type" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_info_type"
                android:paddingVertical="@dimen/_8sdp"
                android:paddingHorizontal="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                style="@style/Text.Title"
                android:textColor="@color/white"
                android:text="CCCD"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                style="@style/Text.Body"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/silver"
                android:textSize="@dimen/_11sdp"
                android:text="@string/full_name" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_info_fullname"
                android:paddingVertical="@dimen/_8sdp"
                android:paddingHorizontal="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                style="@style/Text.Title"
                android:textColor="@color/white"
                android:text="CCCD"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                style="@style/Text.Body"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/silver"
                android:textSize="@dimen/_11sdp"
                android:text="@string/citizen_id" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_info_number_id"
                android:paddingVertical="@dimen/_8sdp"
                android:paddingHorizontal="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                style="@style/Text.Title"
                android:textColor="@color/white"
                android:text="123456789012"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_passport_number"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                style="@style/Text.Body"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/silver"
                android:textSize="@dimen/_11sdp"
                android:text="@string/number_passport" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_passport_number"
                android:paddingVertical="@dimen/_8sdp"
                android:paddingHorizontal="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                style="@style/Text.Title"
                android:textColor="@color/white"
                android:text="012345678"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                style="@style/Text.Body"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/silver"
                android:textSize="@dimen/_11sdp"
                android:text="@string/dob" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_info_birthday"
                android:paddingVertical="@dimen/_8sdp"
                android:paddingHorizontal="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                style="@style/Text.Title"
                android:textColor="@color/white"
                android:text="12/12/2000"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                style="@style/Text.Body"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/silver"
                android:textSize="@dimen/_11sdp"
                android:text="@string/expiry_date" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_info_due_date"
                android:paddingVertical="@dimen/_8sdp"
                android:paddingHorizontal="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                style="@style/Text.Title"
                android:textColor="@color/white"
                android:text="12/12/2050"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_gender"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                style="@style/Text.Body"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/silver"
                android:textSize="@dimen/_11sdp"
                android:text="@string/gender"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_info_gender"
                android:paddingVertical="@dimen/_8sdp"
                android:paddingHorizontal="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                style="@style/Text.Title"
                android:textColor="@color/white"
                android:text="Nam"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_address"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                style="@style/Text.Body"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/silver"
                android:textSize="@dimen/_11sdp"
                android:text="@string/place_of_residence" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_info_address"
                android:paddingVertical="@dimen/_8sdp"
                android:paddingHorizontal="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                style="@style/Text.Title"
                android:textColor="@color/white"
                android:text="HCM"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_identification"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                style="@style/Text.Body"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/silver"
                android:textSize="@dimen/_11sdp"
                android:text="@string/personal_identification" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_info_identification_sign"
                android:paddingVertical="@dimen/_8sdp"
                android:paddingHorizontal="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                style="@style/Text.Title"
                android:textColor="@color/white"
                android:text="Nuốt ruồi"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>